# dyad

./: .clang-format  .gitignore  .gitpod.yml  CMakeLists.txt  DOCUMENTATION.md  Makefile  Makefile.am  PULL_REQUEST_DESCRIPTION.md  README.md  check.txt  configure.ac  dyad_mod_0.err  dyadrun.in  example_usage.py  test_cext_comprehensive.py  test_cext_simple.py
.github/prod-cons/: dyad_consumer.sh  dyad_prod_cons_test.sh  dyad_producer.sh  prod_cons_argparse.sh
.github/setup/: setup_spack.sh
.github/workflows/: compile_test.yaml  dyad_consumer.sh  dyad_pc_test.sh  format-check.yml
CMake/: dyad-config-version.cmake.in  dyad-config.cmake.build.in  dyad-config.cmake.install.in
cmake/: FindFluxCore.cmake
cmake/configure_files/: DYADConfig.cmake.in  dyad_config.hpp.in  dyad_module.lua.in
config/: ax_flux_core.m4  ax_perfflow_aspect.m4
docker/: Dockerfile  packages.yaml
docs/: conf.py  developer_guide.rst  ecp_feb_2023_tutorial.rst  getting_started.rst  index.rst  publications.rst  requirements.txt
docs/bib/: posters.bib
dyad/: .clang-format  .readthedocs.yaml  connect_openvpn.sh  connect_vpn.sh  connect_wireguard.sh  free-vpn-fixed.ovpn  free-vpn.ovpn  freevpn.ovpn  protonvpn-free.ovpn  setup_vpn.sh  vpn_control.sh  vpn_manager.sh
pydyad/: ollama_cli.py  ollama_gui.py  setup.cfg  setup.py
pydyad/pydyad/: __init__.py  bindings.py  context.py  dyad_ollama.c  hdf.py  ollama_integration.py
run/: merge_perfflow.sh
scripts/: corona.sh  mpi_attach.py  setup-env.sh
src/: Makefile.am  dyad.cfg
src/common/: Makefile  Makefile.am  b64_payload.c  b64_payload.h  dyad.h  dyad_cpa.h  utils.c  utils.h
src/common/libtap/: Makefile  Makefile.am
src/core/: CMakeLists.txt  Makefile.am  dyad_core.c  dyad_core.h  dyad_core.sym  dyad_dtl_defs.h  dyad_envs.h  dyad_err.h  dyad_flux_log.h  dyad_open_dlwrap.c  dyad_open_dlwrap.h  dyad_rc.h
src/core/dtl/: dyad_dtl.c  dyad_dtl.h  flux_dtl.c  flux_dtl.h  ucx_dtl.c  ucx_dtl.h
src/dtl/: CMakeLists.txt  Makefile.am  dyad_dtl.h  dyad_dtl_impl.c  dyad_dtl_impl.h  dyad_flux_log.h  dyad_rc.h  flux_dtl.c  flux_dtl.h  ucx_dtl.c  ucx_dtl.h
src/dyad/: CMakeLists.txt  Makefile.am
src/dyad/c_api/: CMakeLists.txt  dyad_c.c
src/dyad/client/: CMakeLists.txt  dyad_client.c  dyad_client_int.h
src/dyad/common/: CMakeLists.txt  dyad_dtl.h  dyad_envs.h  dyad_flux_log.h  dyad_logging.h  dyad_profiler.h  dyad_rc.h  dyad_structures.h  dyad_structures_int.h
src/dyad/core/: CMakeLists.txt  Makefile.am  dyad_core.c  dyad_core.h  dyad_core_int.h  dyad_ctx.c  dyad_ctx.h  dyad_envs.h
src/dyad/dtl/: CMakeLists.txt  Makefile.am  dyad_dtl.h  dyad_dtl_api.c  dyad_dtl_api.h  dyad_dtl_impl.c  dyad_dtl_impl.h  flux_dtl.c  flux_dtl.h  margo_dtl.c  margo_dtl.h  ucx_dtl.c  ucx_dtl.h  ucx_ep_cache.cpp  ucx_ep_cache.h
src/dyad/modules/: CMakeLists.txt  Makefile.am  dyad.c  test_opt_parse.c  urpc.c  urpc_ctx.h
src/dyad/perf/: CMakeLists.txt  Makefile.am  caliper_perf.cpp  dyad_perf.c  dyad_perf.h
src/dyad/residency/: CMakeLists.txt  dyad_cache.hpp  fcache.cpp  fcache.hpp  fcache_impl.hpp  test_fcache.cpp
src/dyad/service/: CMakeLists.txt  dyad_exe.c
src/dyad/service/flux_module/: CMakeLists.txt  dyad.c
src/dyad/service/margo/: CMakeLists.txt  margo-server.c
src/dyad/service/residency/: CMakeLists.txt  dyad_cache.hpp  fcache.cpp  fcache.hpp  fcache_impl.hpp  test_fcache.cpp
src/dyad/stream/: CMakeLists.txt  Makefile.am  dyad_params.hpp  dyad_stream_core.cpp
src/dyad/urpc/: CMakeLists.txt  Makefile.am  urpc_client.c
src/dyad/utils/: CMakeLists.txt  Makefile.am  memstat.c  memstat.h  murmur3.c  murmur3.h  read_all.c  read_all.h  test_cmp_canonical_path_prefix.c  test_murmur3.c  utils.c  utils.h
src/dyad/utils/base64/: CMakeLists.txt  Makefile.am  base64.h
src/dyad/wrapper/: CMakeLists.txt  Makefile.am  flux_barrier.c  wrapper.c
src/lib/: Makefile  Makefile-urpc  Makefile.am  dyad_params.hpp  dyad_stream_api.hpp  dyad_stream_core.cpp  dyad_stream_core.hpp  urpc_client.c  urpc_client.h  urpc_ctx.h
src/lib/test_stream/: Makefile  args.sh  batch.sh  combined_test.cpp  io_cpp.cpp  io_cpp.hpp  io_test.cpp  io_test.hpp  startup.sh  test_stream.cpp
src/lib/test_urpc/: Makefile  test_urpc.cpp
src/modules/: CMakeLists.txt  Makefile-urpc  Makefile.am  README.md  dyad.c  dyad_ctx.h  dyad_flux_log.h  read_all.c  read_all.h  urpc.c  urpc_ctx.h
src/modules/dtl/: dyad_mod_dtl.c  dyad_mod_dtl.h  flux_mod_dtl.c  flux_mod_dtl.h  ucx_mod_dtl.c  ucx_mod_dtl.h
src/modules/test/: Makefile  compute.c
src/stream/: CMakeLists.txt  Makefile.am  dyad_params.hpp  dyad_stream_api.hpp  dyad_stream_core.cpp  dyad_stream_core.hpp
src/stream/test/: args.sh  combined_test.cpp  io_cpp.cpp  io_cpp.hpp  io_test.cpp  io_test.hpp  test_stream.cpp
src/utils/: CMakeLists.txt  Makefile.am  murmur3.c  read_all.c  read_all.h  utils.c  utils.h
src/utils/base64/: CMakeLists.txt  Makefile.am  base64.c  base64.h
src/utils/libtap/: Makefile.am  tap.c  tap.h
src/wrapper/: CMakeLists.txt  Makefile  Makefile.am  README.md  cpa_dump.c  dyad_ctx.h  dyad_fstream.hpp  flux_barrier.c  wrapper.c  wrapper.h  wrapper.sym
src/wrapper/test/: Makefile  args.sh  check_file.cpp  combined_test.cpp  combined_test.sh  cons_test.cpp  cons_test.sh  consumer_test.c  flist.cpp  flist.hpp  glob.cpp  glob.hpp  io_c.c  io_c.h  io_test.cpp  io_test.hpp  prod_test.cpp  prod_test.sh  producer_test.c  startup.sh  timer.hpp  user_cpa.h
tests/: CMakeLists.txt
tests/dspaces_perf/: CMakeLists.txt  unit_test.cpp
tests/dspaces_perf/data_plane/: data_plane.cpp
tests/dspaces_perf/mdm/: CMakeLists.txt
tests/dspaces_perf/script/: CMakeLists.txt  dspaces_stop.sh
tests/shuffle/: CMakeLists.txt  README.md  shuffle.cpp  worker.cpp  worker.hpp
tests/unit/: CMakeLists.txt  catch_config.h  mpi_console_reporter.cpp  test_utils.h  unit_test.cpp
tests/unit/data_plane/: CMakeLists.txt  data_plane.cpp
tests/unit/dyad_core/: core_functions.cpp
tests/unit/mdm/: CMakeLists.txt  mdm.cpp
tests/unit/script/: dyad_start.sh  dyad_stop.sh
tests/unit/ucx/: CMakeLists.txt  test.c  ucx_test.cpp
(+265 files in other folders)
